@@ -1,3 +1,10 @@
+2003-03-07  Michal Ludvig  <mludvig@suse.cz>
+
+	* x86-64-tdep.c (x86_64_function_has_prologue): New function.
+	(x86_64_skip_prologue): Move prologue detection to 
+	separate function.
+	* x86-64-tdep.h (x86_64_function_has_prologue): New prototype.
+
 2003-03-05  Andrew Cagney  <cagney@redhat.com>
 
 	* d10v-tdep.c (d10v_unwind_dummy_id): New function.
